--- a/flight_logbook/pubspec.yaml
+++ b/flight_logbook/pubspec.yaml
@@ -29,21 +29,30 @@ dependencies:
   # https://pub.dev/packages/cupertino_icons
   cupertino_icons: ^0.1.3
 
+  # https://pub.dev/packages/flutter_bloc
+  equatable: ^1.1.1
+
+  # https://pub.dev/packages/flutter_bloc
+  flutter_bloc: ^3.2.0
+
   # https://pub.dev/packages/cloud_firestore
   cloud_firestore: ^0.13.4
 
   # https://pub.dev/packages/firebase_auth
-  # DO NOT ADD ^ since it causes "UserAgent.h not found error on ios build"
+  # DO NOT ADD ^ since it causes "UserAgent.h not found error on ios build" (as of 0.15.5+2)
   firebase_auth: 0.15.4
 
+  # https://pub.dev/packages/google_sign_in
+  google_sign_in: ^4.1.4
+
   # https://pub.dev/packages/firebase_core
-  # DO NOT ADD ^ since it causes "UserAgent.h not found error on ios build"
+  # DO NOT ADD ^ since it causes "UserAgent.h not found error on ios build" (as of 0.4.4+2)
   firebase_core: 0.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  test:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
