--- a/flight_logbook/pubspec.yaml
+++ b/flight_logbook/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # https://pub.dev/packages/cupertino_icons
   cupertino_icons: ^0.1.3
 
+  # https://pub.dev/packages/font_awesome_flutter
+  font_awesome_flutter: ^8.7.0
+
   # https://pub.dev/packages/flutter_bloc
   equatable: ^1.1.1
 
