--- a/flight_logbook/pubspec.yaml
+++ b/flight_logbook/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   # https://pub.dev/packages/awesome_dialog
   awesome_dialog: ^0.1.3
 
+  # https://pub.dev/packages/flutter_slidable
+  flutter_slidable: ^0.5.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
