added test for LoginBloc

--- a/flight_logbook/pubspec.yaml
+++ b/flight_logbook/pubspec.yaml
@@ -63,6 +63,9 @@ dev_dependencies:
     sdk: flutter
   test:
 
+  # https://pub.dev/packages/mockito
+  mockito: ^4.1.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
