--- a/flight_logbook/pubspec.yaml
+++ b/flight_logbook/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_bloc: ^3.2.0
 
   # https://pub.dev/packages/cloud_firestore
-  cloud_firestore: ^0.13.4
+  cloud_firestore: ^0.13.4+1
 
   # https://pub.dev/packages/firebase_auth
   # DO NOT ADD ^ since it causes "UserAgent.h not found error on ios build" (as of 0.15.5+2)
