--- a/flight_logbook/pubspec.yaml
+++ b/flight_logbook/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   # https://pub.dev/packages/flutter_slidable
   flutter_slidable: ^0.5.4
 
+  # https://pub.dev/packages/shared_preferences
+  shared_preferences: ^0.5.6+3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
